--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background: lightcyan;
+    background: cornsilk;
     font-family: sans-serif;
-    width: 600px;
+    width: 800px;
 }
 
 h1 {
