Implemented CSS Styling to the rest recipe pages Added HTML classes to Acai, Lemon Pasta and oats Added an additional class for styling links Modified text basic structure in the HTML recipe pages.

--- a/recipes/recipe-style.css
+++ b/recipes/recipe-style.css
@@ -29,6 +29,7 @@ h1 {
 
     text-align: center;
     margin: 1px auto;
+    
 }
 
 img {
@@ -54,3 +55,7 @@ img {
     padding: 0px;
 }
 
+.innerlink {
+    background-color: lightyellow;
+    color: teal;
+}
